# react-native-view-shot

./: .gitignore  README.md  package-lock.json  package.json  react-native-oh-tpl-react-native-view-shot-3.8.0-0.1.1.tgz
harmony/: view_shot.har
harmony/view_shot/: oh-package.json5  ts.ts
harmony/view_shot/src/main/: module.json5
harmony/view_shot/src/main/cpp/: CMakeLists.txt  ViewShotPackage.h  ViewShotTurboModule.cpp  ViewShotTurboModule.h
harmony/view_shot/src/main/ets/: Logger.ts  ViewShotPackage.ts  ViewShotTurboModule.ts
src/: NativeModule.js  NativeViewShot.js  index.d.ts  index.js
